# concise-encoding

./: .gitignore  .gitmodules  .markdownlint.json  CNAME  DESIGN.md  LICENSE-SPEC.md  LICENSE.md  README.md  cbe-specification.md  cbe.dogma  cbe.kbnf  ce-structure.md  ces-specification.md  common-generic-metadata.md  cte-condensed.md  cte-specification.md  cte.dogma  cte.kbnf  design.md  implementations.html  index.html  main.css  minify.sh  request-for-comments.md  resources.html  specs.html  support-ce.html  thankyou.html  tools.html
ANTLR/: CTELexer.g4  CTEParser.g4  README.md
antlrv4-grammar/: CTE.g4  CTELexer.g4  README.md
ce/: index.html
new/: main.css  resources.html
reference-implementation/: CMakeLists.txt  README.md
reference-implementation/cbe/: CMakeLists.txt  LICENSE-CODE.md  README.md  meson.build
reference-implementation/cbe/cmake/: CBEConfig.cmake.in
reference-implementation/cbe/include/cbe/: cbe.h
reference-implementation/cbe/src/: cbe_internal.h  decoder.c  encoder.c  kslog.h  kslogger.c  kslogger.h  library.c  version.h.in
reference-implementation/cbe/test/: CMakeLists.txt
reference-implementation/cbe/test/src/: array.cpp  as_string.cpp  as_string.h  binary_data.cpp  bool.cpp  cbe_decoder.cpp  cbe_decoder.h  cbe_encoder.cpp  cbe_encoder.h  decimal_128.cpp  decimal_32.cpp  decimal_64.cpp  decode_encode.c  decode_encode.h  decode_piecemeal.cpp  empty.cpp  encode_decode.cpp  encode_piecemeal.cpp  encoding.cpp  encoding.h  float_128.cpp  float_32.cpp  float_64.cpp  general_tests.cpp  int_128.cpp  int_16.cpp  int_32.cpp  int_64.cpp  int_8.cpp  invalid_document.cpp  library.cpp  list.cpp  main.cpp  map.cpp  old.cpp  old_test_helpers.cpp  old_test_helpers.h  stop_in_callback.cpp  string.cpp  support.cpp  (+5 more)
reference-implementation/cbe/tests/: CMakeLists.txt
reference-implementation/cbe/tests/src/: binary.cpp  bytes.cpp  cbe_decoder.cpp  cbe_decoder.h  cbe_encoder.cpp  cbe_encoder.h  comment.cpp  encoding.cpp  encoding.h  general.cpp  general_tests.cpp  list.cpp  map.cpp  readme_examples.c  spec_examples.cpp  stop_in_callback.cpp  string.cpp  test_helpers.cpp  test_helpers.h
reference-implementation/cbe/tests/src/helpers/: cbe_decoder.cpp  cbe_decoder.h  cbe_encoder.cpp  cbe_encoder.h  encoding.cpp  encoding.h  test_helpers.cpp  test_helpers.h  test_utils.cpp  test_utils.h
reference-implementation/cte/: CMakeLists.txt  FindRAGEL.cmake  meson.build
reference-implementation/cte/cmake/: CTEConfig.cmake.in
reference-implementation/cte/include/cte/: cte.h
reference-implementation/cte/include/smalltime/: smalltime.h
reference-implementation/cte/src/: cte.l  cte.y  cte_internal.h  cte_version.h.in  decode.rl.c  decoder.c  decoder.h  decoder.rl.c  encoder.c  library.c
reference-implementation/cte/subprojects/: safe16  safe85  smalltime
reference-implementation/cte/test/: CMakeLists.txt
reference-implementation/cte/test/src/: decode_test_helpers.c  decode_test_helpers.h  managed_allocator.c  managed_allocator.h  parse_test_helpers.c  parse_test_helpers.h  readme_examples.cpp  test_cte_decode.cpp  test_cte_encode.cpp  test_cte_parse.cpp  test_parse.cpp
reference-implementation/cte/tests/: CMakeLists.txt  GTestCMakeLists.txt.in  googletest  meson.build
reference-implementation/cte/tests/src/: binary.cpp  comment.cpp  cte_decoder.cpp  cte_decoder.h  cte_encoder.cpp  cte_encoder.h  decode_test_helpers.c  decode_test_helpers.h  encoding.cpp  general.cpp  readme_examples.cpp  string.cpp  test_cte_decode.cpp  test_cte_encode.cpp
reference-implementation/cte/tests/src/helpers/: cte_decoder.cpp  cte_decoder.h  cte_encoder.cpp  cte_encoder.h  encoding.cpp  encoding.h  test_helpers.cpp  test_helpers.h
reference-implementation/include/cbe/: cbe.h  cbe_config.h  decoder.h  encoder.h
reference-implementation/src/: cbe.c  cbe_internal.h  cbe_version.h.in  decoder.c  encoder.c  library.c
reference-implementation/test/: CMakeLists.txt  cte-specification.md
reference-implementation/test/src/: array.cpp  array_int16.cpp  bool.cpp  bytes.cpp  date.cpp  decimal_128.cpp  decimal_64.cpp  decode_encode.c  decode_encode.h  decode_helpers.h  decode_int.cpp  empty.cpp  encode_array.cpp  encode_bool.cpp  encode_bytes.cpp  encode_date.cpp  encode_empty.cpp  encode_float128.cpp  encode_float32.cpp  encode_float64.cpp  encode_float_128.cpp  encode_float_32.cpp  encode_int128.cpp  encode_int16.cpp  encode_int32.cpp  encode_int64.cpp  encode_int8.cpp  encode_int_128.cpp  encode_int_16.cpp  encode_int_32.cpp  encode_int_64.cpp  encode_int_8.cpp  encode_list.cpp  encode_map.cpp  encode_string.cpp  encode_support.cpp  encode_test_helpers.h  float128.cpp  float32.cpp  float64.cpp  (+22 more)
release-builder/: README.md  publish_release.sh  release-index.md  release-list-index.md
src/: README.md  github-pandoc.css  index.html  main.css  publish_release.py  release_list_index.html  releases.csv  resources.html  support-ce.html  thankyou.html
src/per_release/: release_index.html
